assets/scss/main.scss
/* ... */
table.research-meta th, table.research-meta td {
    overflow: auto;
}

// Cookies
#cookie-disclaimer{ // TO: Using #cookie-disclaimer instead of .cookies-box to force override
    background: rgb(63, 70, 74);
    p{
        a{
            color:white!important;
            text-decoration: underline!important;
            background-color:none!important;
            &:hover{
                opacity: 0.8;
            }//&:hover
        }//a
        button{
            background-color:$darkorange;
            color:white!important;
            &:hover{
                background-color:$white!important;
                color:$darkorange!important;
            }//&:hover
        }// button
    }//p
}//#cookie-disclaimer


// GN: AX-4.1.1-home
#sticky-nav li a {
    height: 63px;
    line-height: 63px;
}

// GN: AX-2.4.7-content - focus visible on expandable sub-categories
.faq-item .toggle a:focus {
    border: 2px solid blue;
}

// GN: AX-1.4.3-search
.relevanssi-query-term {
    color: #616161;
}

// GN: improved accessibility of the accordions on FAQs, ...
.accordian button {
    text-align: inherit;
    color: #D14900;
    background-color: inherit;
    border: none;
    border-top: 1px solid #757575;
    cursor: pointer;
    font-weight: bold;
    width: 100%;
    line-height: 2em;
}
.accordian button:before {
    content: '🞂';
}
.accordian button[aria-expanded=true]:before {
    content: '⯆';
}
.accordian button:focus, .accordian button:hover, .accordian button:active {
    text-decoration: underline;
}
.accordian button:focus {
  outline: 4px solid #1864ab;
  outline-offset: 5px;
}

